package ThiCK.OnTap.Nhat_State;

public interface ICusState {
    double getGiamGia();
    String getTrangThai();
    int doiDiem(int diem);
}
